<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="fragment"
            type="com.quizmokvack.ui.quizsplash.QuizSplashFragment" />

        <variable
            name="viewModel"
            type="com.quizmokvack.ui.quizsplash.QuizSplashViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/loading_title"
            goneUnless="@{viewModel.loadingVisible}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/init_quiz"
            android:textColor="@color/white"
            android:textAppearance="?textAppearanceHeadline5"
            app:layout_constraintBottom_toTopOf="@id/progress_bar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <ProgressBar
            android:id="@+id/progress_bar"
            goneUnless="@{viewModel.loadingVisible}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/loading_title" />

        <androidx.constraintlayout.widget.ConstraintLayout
            goneUnless="@{viewModel.errorVisible}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/error_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="48dp"
                android:layout_marginEnd="48dp"
                android:gravity="center"
                android:text="@string/error_message"
                android:textColor="@color/white"
                android:textAppearance="?textAppearanceBody1"
                app:layout_constraintBottom_toTopOf="@id/error_retry_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />

            <Button
                android:id="@+id/error_retry_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:onClick="@{fragment::onErrorRetry}"
                android:paddingStart="48dp"
                android:paddingTop="14dp"
                android:paddingEnd="48dp"
                android:paddingBottom="14dp"
                android:text="@string/try_again"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/error_text" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
